# score_concrete_and_abstract

./: README.md  check_data.ipynb  check_data_with_pred.ipynb  pyproject.toml
concrete_and_abstract/: add_mrcdb.py  calc_score.py  filter_mrcdb.py  main_org.py  main_with_pred.py  text_prepare.py  tokenizer.py  word_dataframe_en_to_ja.py  word_vector.py
